--- a/estilo2.css
+++ b/estilo2.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
 body {background-color: #006699; 
-font-family: Arial Black;font-size: 11px;font-weight: bold;
+font-family: Arial;font-size: 16px;font-weight: bold;
 text-decoration: none;
-color: #FFFFFF;background-position: center;margin: 24% auto 0% auto;
+color: ##000000;background-position: center;margin: 24% auto 0% auto;
 text-align:center;
 vertical-align:middle;
 overflow: hidden;}
